--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,33 @@
+<link rel="stylesheet" href="styles.css">
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Artist Portfolio — Home</title>
+</head>
+<body>
+
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="about.html">About</a></li>
+  </ul>
+</nav>
+
+<header class="hero">
+  <h1>Welcome to My Art Portfolio</h1>
+  <p>Discover my creative journey and selected artworks.</p>
+</header>
+
+<section class="intro">
+  <h2>Featured Work</h2>
+  <img src="images/art1.jfif" alt="Featured Artwork">
+</section>
+
+</body>
+</html>
 
